<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cashier_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="anmolcentralacademy@gmail.com">spacexpedition</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interface<?depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
